feat: Futuristic rounded launcher window aesthetic, clean single Vanilla (1.21.1) profile model, and redesigned ProfileManagerPanel